--- a/Главная.html
+++ b/Главная.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body">
+  <body class="u-body">
     <section class="u-align-center u-clearfix u-grey-5 u-section-1" id="carousel_3a70">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div alt="" class="u-border-15 u-border-palette-4-base u-image u-image-circle u-image-1" data-image-width="555" data-image-height="1280"></div>
