--- a/index.html
+++ b/index.html
@@ -40,25 +40,11 @@
     <meta property="og:title" content="Главная">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <script>window._u_GDPRConfirmCode = function () {<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(83725552, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/83725552" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->}</script></head>
+  </head>
   <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body">
     <section class="u-align-center u-clearfix u-grey-5 u-section-1" id="carousel_3a70">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div alt="" class="u-border-15 u-border-palette-4-base u-image u-image-circle u-image-1" data-image-width="555" data-image-height="1280"></div>
+        <div alt="" class="u-border-15 u-border-palette-4-base u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="852"></div>
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
