--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-text u-text-1">
-                    <span style="font-size: 3rem;">Сильная магическая помощь </span>
+                    <span style="font-size: 3rem;">Сильная магическая помостчшщь </span>
                   </h2>
                   <h5 class="u-custom-font u-text u-text-font u-text-2"> Магическое решение Ваших проблем!</h5>
                   <a href="https://silnayamagiya.ru" class="u-active-black u-align-left u-border-2 u-border-active-black u-border-black u-border-hover-black u-btn u-button-style u-hover-black u-none u-text-active-white u-text-black u-text-hover-white u-btn-1">связь со мной</a>
