--- a/Сильная-Магия-Решение-проблем.html
+++ b/Сильная-Магия-Решение-проблем.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="сильная магия, магия помощь, магическая помощь, магия любовь, черная магия, белая магия">
     <meta name="description" content="Описание по умолчанию">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Главная</title>
+    <title>Сильная Магия Решение проблем</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Главная.css" media="screen">
+<link rel="stylesheet" href="Сильная-Магия-Решение-проблем.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link rel="icon" href="images/favicon.png">
@@ -22,29 +22,32 @@
 		"name": "Сильная магия"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Главная">
+    <meta property="og:title" content="Сильная Магия Решение проблем">
     <meta property="og:description" content="Описание по умолчанию">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body">
     <section class="u-align-center u-clearfix u-grey-5 u-section-1" id="carousel_3a70">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div alt="" class="u-border-15 u-border-palette-4-base u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="852"></div>
+        <div alt="" class="u-border-15 u-border-palette-4-base u-expanded-width-xs u-image u-image-circle u-preserve-proportions u-image-1" data-image-width="1300" data-image-height="1300">
+          <div class="u-preserve-proportions-child" style="padding-top: 100%;"></div>
+        </div>
+        <p class="u-text u-text-default u-text-1">Святой Пантелеймон</p>
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-text u-text-1">
+                  <h2 class="u-text u-text-2">
                     <span style="font-size: 3rem;">Сильная магическая помощь </span>
                   </h2>
-                  <h5 class="u-custom-font u-text u-text-font u-text-2"> Магическое решение Ваших проблем!</h5>
+                  <h5 class="u-custom-font u-text u-text-font u-text-3"> Магическое решение Ваших проблем!</h5>
                   <a href="https://silnayamagiya.ru" class="u-active-black u-align-left u-border-2 u-border-active-black u-border-black u-border-hover-black u-btn u-button-style u-hover-black u-none u-text-active-white u-text-black u-text-hover-white u-btn-1">связь со мной</a>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <p class="u-text u-text-3">
+                  <p class="u-text u-text-4">
                     <span style="font-size: 1.5rem; font-weight: 700;">Магическое решение Ваших проблем! </span>
                     <br>Пропал интерес к жизни? <br>По утрам не хочется вставать? <br>
                     <a href="https://silnayamagiya.ru" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Невыносимо больно от расставания с любимым?</a>
