--- a/belaya-magiya/zagovor-na-lubov/index.html
+++ b/belaya-magiya/zagovor-na-lubov/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Описание по умолчанию">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Сильная Магия Решение проблем</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
+    <link rel="stylesheet" href="https://silnayamagiya.ru/nicepage.css" media="screen">
 <link rel="stylesheet" href="Сильная-Магия-Решение-проблем.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
