--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 <!-- /Yandex.Metrika counter -->
 
   <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-10JS4FW5SR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-10JS4FW5SR');
+</script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="сильная магия, магия помощь, магическая помощь, магия любовь, черная магия, белая магия">
