--- a/silnaya-magiya.html
+++ b/silnaya-magiya.html
@@ -1,38 +1,12 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(83725552, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/83725552" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-
-  <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-10JS4FW5SR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-10JS4FW5SR');
-</script>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="сильная магия, магия помощь, магическая помощь, магия любовь, черная магия, белая магия">
-    <meta name="description" content="В ходе диагностики я разбираюсь в Вашей проблеме, оцениваю её сложность, выбираю оптимальные способы её решения. После такой диагностики я даю клиенту короткое заключение. Если это стороннее воздействие, то говорю какого оно рода и что нужно для того чтобы его устранить. Если это предварительная диагностика перед выполнением заказа по магической работе, то сообщаю клиенту берусь ли я её выполнять или нет.">
+    <meta name="description" content="Описание по умолчанию">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Сильная Магия | Ярослав Сергеевич</title>
+    <title>silnaya-magiya</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="silnaya-magiya.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -55,7 +29,7 @@
     <meta property="og:description" content="Описание по умолчанию">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="silnaya-magiya.html" data-home-page-title="silnaya-magiya" class="u-body">
+  <body class="u-body">
     <section class="u-border-2 u-border-grey-75 u-clearfix u-image u-section-1" id="sec-0d4b" data-image-width="2000" data-image-height="1125">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-6 u-layout-wrap u-layout-wrap-1">
