--- a/m/index.html
+++ b/m/index.html
@@ -146,8 +146,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRajqQb5fF-modal" data-bs-target="#sRajqQb5fF-modal">
-                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRakrfwOdd-modal" data-bs-target="#sRakrfwOdd-modal">
+                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -155,8 +155,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Mobile Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRajqQb5fF-modal" data-bs-target="#sRajqQb5fF-modal">
-                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRakrfwOdd-modal" data-bs-target="#sRakrfwOdd-modal">
+                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -164,8 +164,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Polygraphic Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRajqQb5fF-modal" data-bs-target="#sRajqQb5fF-modal">
-                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRakrfwOdd-modal" data-bs-target="#sRakrfwOdd-modal">
+                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -173,8 +173,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Web Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRajqQb5fF-modal" data-bs-target="#sRajqQb5fF-modal">
-                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#sRakrfwOdd-modal" data-bs-target="#sRakrfwOdd-modal">
+                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -183,11 +183,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sRajqQb5fF-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sRakrfwOdd-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-sRajqQb5fF" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-sRakrfwOdd" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/mbr-596x397.jpg" alt="">
@@ -203,18 +203,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sRajqQb5fF" data-bs-target="#lb-sRajqQb5fF"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-sRakrfwOdd" data-bs-target="#lb-sRakrfwOdd"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sRajqQb5fF">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-sRakrfwOdd">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sRajqQb5fF">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-sRakrfwOdd">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -573,7 +573,7 @@
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-4 offset-lg-1 mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MM1A3MJ1vvkPVOy6BzG+gnzzHvdOZkWF7Dk7kqgWpa1wSziAulYfNrmiHXi2SevgqIDBH+eIp5+zIpRgUfY8uUqbqw7GmpjXd169NmiqRBbYJlCRmvPUHJZaO1HS6MHS">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SOBz5Db2B78fznF6zscqbFELlrObr+aHTOAWKcyZq/QDUK8oyLrYBYOekil3kxdQgbHJeswPKR2H/vslj3lX6gvNW/uc190R0wRj0xHi45jTYEzQm3RquE6Y1oop6S4h">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Скоро я отвечу вам, откройте почту!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -698,7 +698,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website builder - <a href="https://mobirise.site/n" style="color:#aaa;">Read more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Learn more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
