--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
                 <div class="mbr-section-head align-center mb-4">
-                    <h3 class="mbr-section-title mb-0 mbr-fonts-style display-2"><strong>Frequently Asked Questions</strong></h3>
+                    <h3 class="mbr-section-title mb-0 mbr-fonts-style display-2"><strong>Часто задаваемые вопросы</strong></h3>
                     
                 </div>
                 <div id="bootstrap-accordion_7" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
