--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <meta name="description" content="">
   
   
-  <title>Ясновидящий Михаил Беляев | Сильная Магия</title>
+  <title>Ясновидящий Михаил Ибрагимов | Сильная Магия</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -95,7 +95,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-2"><strong>СИЛЬНЕЙШАЯ ЛЮБОВНАЯ МАГИЯ</strong></h1>
                 
                 <p class="mbr-text mbr-white mbr-fonts-style display-5">
-                    Подскажу, как решить ваш вопрос — разложу карты Таро или проведу диагностику по фото
+                    Подскажу как решить ваш вопрос, проведу диагностику по фото, проведу необходимый ритуал, прочту информацию из тонкого мира
                 </p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-4" href="https://wa.me/79213722160">Получить бесплатную консультацию</a></div>
             </div>
