--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5">
                         <strong>
 </strong><div><strong>Практикующий эзотерик</strong><br></div><div><strong>Михаил Ибрагимов</strong></div></h1>
-                    <p class="mbr-text mbr-fonts-style display-7">Ясновидение. Делаю точные прогнозы на будущее <br>с указанием дат и временных периодов. <br>Обряды: на женскую привлекательность, на беременность, <br>на скорое замужество, на финансовый успех и др.<br>Уникальная авторская магия: Приворот. <br>Сексуальная привязка. Приворожу мужа, восстановлю <br>утраченные отношения. Помогу обрести женское счастье. <br>Снимаю венец безбрачия. <br>Бизнес магия. <br>Похудение.<br>Ритуал на зачатие.<br><strong>Новейший ритуал</strong> на излечение и <br>профилактику от кopoнавиpycа.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">Ясновидение. Делаю точные прогнозы на будущее с указанием дат и временных периодов. <br>Обряды: на женскую привлекательность, на беременность, на скорое замужество, на финансовый успех и др.<br>Уникальная авторская магия: Приворот. <br>Сексуальная привязка. Приворожу мужа, восстановлю утраченные отношения. Помогу обрести женское счастье. <br>Снимаю венец безбрачия. <br>Бизнес магия. <br>Похудение.<br>Ритуал на зачатие.<br><strong>Новейший ритуал</strong> на излечение и <br>профилактику от кopoнавиpycа.</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-7" href="#gallery5-3">Авторские ритуалы</a> <a class="btn btn-secondary display-7" href="#form4-6">Связаться со мной</a></div>
                 </div>
             </div>
