--- a/form2500_3529435603/index.html
+++ b/form2500_3529435603/index.html
@@ -100,7 +100,7 @@
                             
                         </div>
                         <h4 class="card-title mbr-fonts-style align-center mb-2 display-5"><strong>Банковская карта</strong></h4>
-						<iframe src="https://yoomoney.ru/quickpay/button-widget?targets=%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4&default-sum=2500&button-text=11&any-card-payment-type=on&button-size=m&button-color=black&successURL=https%3A%2F%2Fsilnayamagiya.ru%2Fthanks%2F&quickpay=small&account=410016655789598&" width="184" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+						<iframe src="https://yoomoney.ru/quickpay/button-widget?targets=%D0%9F%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4&default-sum=2400&button-text=11&any-card-payment-type=on&button-size=m&button-color=orange&successURL=&quickpay=small&account=410016655789598&" width="184" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                              </p>
                         
