--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
 <p class="mbr-text mbr-fonts-style mb-4 display-7"> Расскажите мне о своей проблеме<br>Я свяжусь с вами для бесплатной консультации</p>
 </div>
 <div data-for="name" class="col-lg-12 col-md col-12 form-group mb-3">
-<input type="text" name="name" placeholder="WhatsApp" data-form-field="name" class="form-control display-7" value="" id="name-form4-6">
+<input type="text" name="name" placeholder="Введите Ваш WhatsApp-номер для связи" data-form-field="name" class="form-control display-7" value="" id="name-form4-6">
 </div>
 
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="textarea">
-<textarea name="textarea" placeholder="Напишите мне, что вас тревожит. И если у вас нет ВатсАп, напишите в данном сообщении любой другой контакт" data-form-field="textarea" class="form-control display-7" id="textarea-form4-6"></textarea>
+<textarea name="textarea" placeholder="Опишите вашу ситуацию, запишитесь на бесплатную диагностику, я отвечу в мессенджер" data-form-field="textarea" class="form-control display-7" id="textarea-form4-6"></textarea>
 </div>
 <div class="col-12 col-md-auto mbr-section-btn"><button type="submit" class="btn btn-secondary display-4">Доставить сообщение</button></div>
 </div>
