--- a/m/index.html
+++ b/m/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Ясновидящий Михаил Беляев | Сильная Магия</title>
+  <title>Ясновидящий Михаил Ибрагимов | Сильная Магия</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="https://silnayamagiya.ru">Ясновидящий<br>Михаил Беляев<br></a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="https://silnayamagiya.ru">Ясновидящий<br>Михаил Ибрагимов<br></a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -74,7 +74,7 @@
                 <div class="text-wrapper text-center">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5">
                         <strong>
-</strong><div><strong>Практикующий эзотерик</strong><br></div><div><strong>Михаил Беляев</strong></div></h1>
+</strong><div><strong>Практикующий эзотерик</strong><br></div><div><strong>Михаил Ибрагимов</strong></div></h1>
                     <p class="mbr-text mbr-fonts-style display-7">Ясновидение. Делаю точные прогнозы на будущее с указанием дат и временных периодов. <br>Обряды: на женскую привлекательность, на беременность, на скорое замужество, на финансовый успех и др. <br>Уникальная авторская магия: Приворот. <br>Сексуальная привязка. Приворожу мужа, восстановлю утраченные отношения. Помогу обрести женское счастье. Снимаю венец безбрачия. <br>Бизнес магия. Похудение.<br>Ритуал на зачатие.</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="index.html#gallery5-3">My Jobs</a> <a class="btn btn-secondary display-7" href="index.html#form4-6">Contacts</a></div>
                 </div>
