--- a/form3500_3529435621/index.html
+++ b/form3500_3529435621/index.html
@@ -34,7 +34,7 @@
   <meta name="description" content="">
   
   
-  <title>Ясновидящий Михаил Беляев | Сильная Магия</title>
+  <title>Ясновидящий Михаил Ибрагимов | Сильная Магия</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
