--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 </div>
 
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="textarea">
-<textarea name="textarea" placeholder="/ Ваше Имя / Самая частая эмоция / Ситуация /" data-form-field="textarea" class="form-control display-7" id="textarea-form4-6"></textarea>
+<textarea name="textarea" placeholder="Напишите мне" data-form-field="textarea" class="form-control display-7" id="textarea-form4-6"></textarea>
 </div>
 <div class="col-12 col-md-auto mbr-section-btn"><button type="submit" class="btn btn-secondary display-4">Доставить сообщение</button></div>
 </div>
