--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <p class="mbr-text mbr-white mbr-fonts-style display-5">
                     Подскажу как решить ваш вопрос, проведу диагностику по фото, проведу необходимый ритуал, прочту информацию из тонкого мира
                 </p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-4" href="https://wa.me/79213722160">Получить бесплатную консультацию</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-4" href="https://wa.me/79811936117">Получить бесплатную консультацию</a></div>
             </div>
         </div>
     </div>
@@ -461,7 +461,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>WhatsApp</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://wa.me/79213722160" class="text-info">+7(921)3722160</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://wa.me/79811936117" class="text-info">+7(981)193-61-17</a></p>
                     </div>
                 </div>
             </div>
