--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="media-container">
             <div class="col-md-12 col-lg-10 m-auto align-center">
                 <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-3 display-2"><strong>Частичная мобилизация в России </strong><br><strong>2022-2023</strong></h1>
-                <p class="mbr-text mbr-white mbr-fonts-style display-7">Почему если каждый гражданин России подлежит призыву, то мобилизация называется частичной?<br>Ответы на самые частые вопросы, обсуждения, способы взаимодействия с этой сложной ситуацией - читайте по кнопке ниже</p>
+                <p class="mbr-text mbr-white mbr-fonts-style display-7">Почему, если каждый гражданин России подлежит призыву, то мобилизация называется частичной?<br>Ответы на самые частые вопросы, обсуждения, способы взаимодействия с этой сложной ситуацией - читайте по кнопке ниже</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="index.html#features19-a">Узнать всё о ситуации</a></div>
 
                 <div class="row pt-5 justify-content-center">
