--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#features10-5">Всем держаться</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">Get Started</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://vk.com/write-216176802">Информация</a></div>
             </div>
         </div>
     </nav>
@@ -101,7 +101,7 @@
             <div class="col-md-12 col-lg-10 m-auto align-center">
                 <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-3 display-2"><strong>Частичная мобилизация в России </strong><br><strong>2022-2023</strong></h1>
                 <p class="mbr-text mbr-white mbr-fonts-style display-7">Почему, если каждый гражданин России подлежит призыву, то мобилизация называется частичной?<br>Ответы на самые частые вопросы, обсуждения, способы взаимодействия с этой сложной ситуацией - читайте по кнопке ниже</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="index.html#features19-a">Узнать всё о ситуации</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://vk.com/write-216176802" target="_blank">Узнать всё о ситуации</a></div>
 
                 <div class="row pt-5 justify-content-center">
                     <div class="col-12 col-md-6 col-lg-3">
@@ -714,7 +714,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/a" style="color:#aaa;">Mobirise</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website <a href="https://mobirise.site/f" style="color:#aaa;">was built</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
